vpc.tf
#Creating VPC
resource "aws_vpc" "demovpc" {
  cidr_blocks       = ["10.0.0.0/16"]
  instance_tenancy = "default"
  tags = {
    Name    = "demovpc"
    Project = "terraform"
  }
}
